--- a/src/Sitecore.Support.200218/App_Config/Include/zzz/Sitecore.Support.200218.config
+++ b/src/Sitecore.Support.200218/App_Config/Include/zzz/Sitecore.Support.200218.config
@@ -1,4 +1,9 @@
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:set="http://www.sitecore.net/xmlconfig/set/" xmlns:role="http://www.sitecore.net/xmlconfig/role/">
-  <sitecore role:require="Standalone OR ContentManagement OR ContentDelivery OR Processing OR Reporting">
+  <sitecore role:require="Standalone or ContentManagement or Reporting">
+    <experienceProfile>
+      <providers>
+        <contactSearchProvider type="Sitecore.Cintel.ContactSearchProvider, Sitecore.Cintel" set:type="Sitecore.Support.Cintel.ContactSearchProvider, Sitecore.Support.200218" />
+      </providers>
+    </experienceProfile>
   </sitecore>
 </configuration>
